# ai-secrets

./: .gitignore  LICENSE  MANIFEST.in  README.md  cleanup_old_service.py  migrate_service_name.py  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: README.md  pydantic_ai_example.py
src/ai_secrets/: __init__.py  cli.py  storage.py
src/secrets_cli/: cli.py
tests/: test_cli.py  test_storage.py
