[project]
name = "ai-secrets"
version = "0.1.2"
description = "AI-friendly secrets management CLI using OS-native keyring encryption"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Björn Bethge", email = "bjoern.bethge@gmail.com"}
]
keywords = ["secrets", "keyring", "cli", "ai", "security", "password", "credentials"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "keyring>=25.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
examples = [
    "pydantic-ai-slim[openai,cli,mcp]>=0.0.14",
]

[project.urls]
Homepage = "https://github.com/BjornBethge/ai-secrets"
Repository = "https://github.com/BjornBethge/ai-secrets"
Issues = "https://github.com/BjornBethge/ai-secrets/issues"
Documentation = "https://github.com/BjornBethge/ai-secrets#readme"

[project.scripts]
ai-secrets = "ai_secrets.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_secrets"]

[tool.uv]
link-mode = "copy"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]
examples = [
    "pydantic-ai-slim[openai,cli,mcp]>=0.0.14",
]
